--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,8 @@
 	<version>1.0.0-SNAPSHOT</version>
 	<packaging>pom</packaging>
 
+    <inceptionYear>2017</inceptionYear>
+
 	<name>ecommerce</name>
 	<url>https://github.com/gestatech/gst-ecommerce</url>
 
