[gst-ecommerce] add liquibase module

--- a/pom.xml
+++ b/pom.xml
@@ -15,13 +15,14 @@
     <version>1.0.0-SNAPSHOT</version>
     <packaging>pom</packaging>
 
-    <inceptionYear>2017</inceptionYear>
-
     <name>ecommerce</name>
+    <inceptionYear>2017</inceptionYear>
+    <description>sample ecommerce project.</description>
     <url>https://github.com/gestatech/gst-ecommerce</url>
 
     <properties>
         <gst-ecommerce.version>1.0.0-SNAPSHOT</gst-ecommerce.version>
+        <liquibase.executionPhase>initialize</liquibase.executionPhase>
     </properties>
 
     <modules>
@@ -36,19 +37,35 @@
 
     <dependencyManagement>
         <dependencies>
-
+            <dependency>
+                <groupId>mysql</groupId>
+                <artifactId>mysql-connector-java</artifactId>
+            </dependency>
+            <dependency>
+                <groupId>org.liquibase</groupId>
+                <artifactId>liquibase-maven-plugin</artifactId>
+            </dependency>
+            <dependency>
+                <groupId>org.elasticsearch</groupId>
+                <artifactId>elasticsearch</artifactId>
+            </dependency>
         </dependencies>
     </dependencyManagement>
 
-    <dependencies>
-        <dependency>
-            <groupId>mysql</groupId>
-            <artifactId>mysql-connector-java</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>org.elasticsearch</groupId>
-            <artifactId>elasticsearch</artifactId>
-        </dependency>
-    </dependencies>
+    <build>
+        <finalName>${project.artifactId}-${project.version}</finalName>
+        <pluginManagement>
+            <plugins>
+                <plugin>
+                    <groupId>org.codehaus.mojo</groupId>
+                    <artifactId>properties-maven-plugin</artifactId>
+                </plugin>
+                <plugin>
+                    <groupId>org.liquibase</groupId>
+                    <artifactId>liquibase-maven-plugin</artifactId>
+                </plugin>
+            </plugins>
+        </pluginManagement>
+    </build>
 
 </project>
