--- a/ecommerce-liquibase/pom.xml
+++ b/ecommerce-liquibase/pom.xml
@@ -13,6 +13,125 @@
     <groupId>be.gestatech</groupId>
     <artifactId>ecommerce-liquibase</artifactId>
     <version>1.0.0-SNAPSHOT</version>
+    <packaging>jar</packaging>
 
-    
+    <build>
+        <finalName>${project.artifactId}-${project.version}</finalName>
+        <plugins>
+            <plugin>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>properties-maven-plugin</artifactId>
+            </plugin>
+            <plugin>
+                <groupId>org.liquibase</groupId>
+                <artifactId>liquibase-maven-plugin</artifactId>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>status</goal>
+                        </goals>
+                    </execution>
+                    <!--  I personally prefer run  it manually -->
+                    <!--execution>
+                        <phase>process-resources</phase>
+                        <goals>
+                            <goal>update</goal>
+                        </goals>
+                    </execution-->
+                </executions>
+                <configuration>
+                    <propertyFile>liquibase/liquibase.properties</propertyFile>
+                    <changeLogFile>liquibase/db-changelog-master.xml</changeLogFile>
+                    <changeLogFile>src/main/resources/db.changelog-NEW.xml</changeLogFile>
+                    <diffChangeLogFile>src/main/resources/db.changelog-NEW.xml</diffChangeLogFile>
+                    <driver>com.mysql.jdbc.Driver</driver>
+                    <username>root</username>
+                    <password>mysql</password>
+                    <url>jdbc:mysql://localhost:3306/gst_ecommerce_db</url>
+                    <referenceDriver>com.mysql.jdbc.Driver</referenceDriver>
+                    <referenceUsername>root</referenceUsername>
+                    <referencePassword>mysql</referencePassword>
+                    <referenceUrl>jdbc:mysql://127.0.0.1:3306/gst_ecommerce_db_dev</referenceUrl>
+                    <promptOnNonLocalDatabase>false</promptOnNonLocalDatabase>
+                </configuration>
+                <dependencies>
+                    <dependency>
+                        <groupId>mysql</groupId>
+                        <artifactId>mysql-connector-java</artifactId>
+                        <version>${mysql-connector-java.version}</version>
+                    </dependency>
+                </dependencies>
+            </plugin>
+        </plugins>
+    </build>
+
+    <profiles>
+        <profile>
+            <id>UPDATE_EGREFFE_DB</id>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.codehaus.mojo</groupId>
+                        <artifactId>properties-maven-plugin</artifactId>
+                        <executions>
+                            <execution>
+                                <id>read-project-properties</id>
+                                <phase>initialize</phase>
+                                <goals>
+                                    <goal>read-project-properties</goal>
+                                </goals>
+                                <configuration>
+                                    <files>
+                                        <file>src/main/config/configuration.properties</file>
+                                    </files>
+                                </configuration>
+                            </execution>
+                        </executions>
+                    </plugin>
+                    
+                    <plugin>
+                        <groupId>org.liquibase</groupId>
+                        <artifactId>liquibase-maven-plugin</artifactId>
+                        <executions>
+                            <execution>
+                                <goals>
+                                    <goal>status</goal>
+                                </goals>
+                            </execution>
+                            <!--  I personally prefer run  it manually -->
+                            <!--execution>
+                                <phase>process-resources</phase>
+                                <goals>
+                                    <goal>update</goal>
+                                </goals>
+                            </execution-->
+                        </executions>
+                        <configuration>
+                            <propertyFile>liquibase/liquibase.properties</propertyFile>
+                            <changeLogFile>liquibase/db-changelog-master.xml</changeLogFile>
+                            <changeLogFile>src/main/resources/db.changelog-NEW.xml</changeLogFile>
+                            <diffChangeLogFile>src/main/resources/db.changelog-NEW.xml</diffChangeLogFile>
+                            <driver>com.mysql.jdbc.Driver</driver>
+                            <username>root</username>
+                            <password>mysql</password>
+                            <url>jdbc:mysql://localhost:3306/gst_ecommerce_db</url>
+                            <referenceDriver>com.mysql.jdbc.Driver</referenceDriver>
+                            <referenceUsername>root</referenceUsername>
+                            <referencePassword>mysql</referencePassword>
+                            <referenceUrl>jdbc:mysql://127.0.0.1:3306/gst_ecommerce_db_dev</referenceUrl>
+                            <promptOnNonLocalDatabase>false</promptOnNonLocalDatabase>
+                        </configuration>
+                        <dependencies>
+                            <dependency>
+                                <groupId>mysql</groupId>
+                                <artifactId>mysql-connector-java</artifactId>
+                                <version>${mysql-connector-java.version}</version>
+                            </dependency>
+                        </dependencies>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+    </profiles>
+
 </project>
